# Price-Alarm

./: .env.example  .gitignore  DESARROLLO_LOCAL.md  LICENSE  Makefile  README.md  REORGANIZACION.md  dev_scraper.py  dev_server.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  explore_db.py  pyproject.toml  render.yaml  requirements.txt  run.bat  test_demo.py  test_telegram.py  test_telegram_simple.py  track.py  track_no_telegram.py
adapters/: __init__.py  alkosto.py  test_adapter.py
app/: __init__.py  main.py
app/templates/: admin.html  dashboard.html
config/: products.yml  products_test.yml
docs/: ARQUITECTURA.md  DOCKER_DESARROLLO.md  LICENSE  README.md
examples/: run.bat  test_demo.py  test_telegram.py  test_telegram_simple.py  track_no_telegram.py
infra/: Dockerfile.scraper  Dockerfile.web
scraper/: __init__.py  main.py  requirements.txt  track.py
shared/: __init__.py  explore_db.py  explore_db_advanced.py
shared/adapters/: __init__.py  alkosto.py  test_adapter.py
shared/config/: products.yml  products_test.yml
shared/utils/: __init__.py  alert.py  database.py  database_new.py  email_alert.py
tests/: README.md  compare_adapters.py  results_20250723_233720.json  test_adapter_interactive.py  test_adapters.py  test_alkosto_complete.py  test_urls.txt
tools/: dev_docker.py  dev_scraper.py  dev_server.py  setup_env.py  test_all.py
utils/: __init__.py  alert.py  database.py  email_alert.py
